tooling/nargo_cli/tests/snapshots/execution_success/regression_9102/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0, _1]",
    "EXPR [ (1, _0) -1 ]",
    "EXPR [ (1, _1) 0 ]"
  ],
  "debug_symbols": "pdHdCoMgFAfwd/HaC3MfRq8yRpidQhAV02BE775TzK0NBqNd6Tl/fwfhTKSFJvW1tp0bSHWZSBO0MbqvjVMyamexO82U5LKOAQBbZJOj8jKAjaSyyRhKRmnS+mjw0q5nlAFTRgnYFk8c2GkDy22mL82+U5FtwcRTn37mnGXPWbHH83P2B77Hi2P2ovzPl+//v2IllQ6fCxtl0LIx8Ci7ZNUmjTefk7xwH5yCNgVYJq0Zzr4D",
  "file_map": {}
}
