tooling/nargo_cli/tests/snapshots/execution_success/regression_9102/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[regression_9102] Circuit output: [1, 0]
